tests/stacks/openshift/application/seldon/test_data/expected/admissionregistration.k8s.io_v1beta1_mutatingwebhookconfiguration_seldon-mutating-webhook-configuration-kubeflow.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/seldon-serving-cert
  creationTimestamp: null
  labels:
    app: seldon
    app.kubernetes.io/component: seldon
    app.kubernetes.io/instance: seldon-core
    app.kubernetes.io/name: seldon-core-operator
    app.kubernetes.io/version: 1.4.0
  name: seldon-mutating-webhook-configuration-kubeflow
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lSQVBpR2diQUl5Z3RKRk9NRnhjYXNIb1V3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUlkzVnpkRzl0TFcxbGRISnBZM010WTJFd0hoY05NakF4TURNeE1UQTBPVFF4V2hjTgpNakV4TURNeE1UQTBPVFF4V2pBY01Sb3dHQVlEVlFRREV4RmpkWE4wYjIwdGJXVjBjbWxqY3kxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFPZ1dnZEN6MVBoekRSYlNOWEsrYkduSUV2aHMKNWdKTzNudkd2K2VBcjladnBOampBTzZZMDdDNmQrcEFUQWlYdVpoMHU2aDVjaERqRmFMUGY2Wi9uWHNXVlNicApaUGFEN01NMU5TbD [...]
    service:
      name: seldon-webhook-service
      namespace: kubeflow
      path: /mutate-machinelearning-seldon-io-v1-seldondeployment
      port: 8443
  failurePolicy: Fail
  name: v1.mseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
    matchLabels:
      serving.kubeflow.org/inferenceservice: enabled
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lSQVBpR2diQUl5Z3RKRk9NRnhjYXNIb1V3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUlkzVnpkRzl0TFcxbGRISnBZM010WTJFd0hoY05NakF4TURNeE1UQTBPVFF4V2hjTgpNakV4TURNeE1UQTBPVFF4V2pBY01Sb3dHQVlEVlFRREV4RmpkWE4wYjIwdGJXVjBjbWxqY3kxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFPZ1dnZEN6MVBoekRSYlNOWEsrYkduSUV2aHMKNWdKTzNudkd2K2VBcjladnBOampBTzZZMDdDNmQrcEFUQWlYdVpoMHU2aDVjaERqRmFMUGY2Wi9uWHNXVlNicApaUGFEN01NMU5TbD [...]
    service:
      name: seldon-webhook-service
      namespace: kubeflow
      path: /mutate-machinelearning-seldon-io-v1alpha2-seldondeployment
      port: 8443
  failurePolicy: Fail
  name: v1alpha2.mseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
    matchLabels:
      serving.kubeflow.org/inferenceservice: enabled
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lSQVBpR2diQUl5Z3RKRk9NRnhjYXNIb1V3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUlkzVnpkRzl0TFcxbGRISnBZM010WTJFd0hoY05NakF4TURNeE1UQTBPVFF4V2hjTgpNakV4TURNeE1UQTBPVFF4V2pBY01Sb3dHQVlEVlFRREV4RmpkWE4wYjIwdGJXVjBjbWxqY3kxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFPZ1dnZEN6MVBoekRSYlNOWEsrYkduSUV2aHMKNWdKTzNudkd2K2VBcjladnBOampBTzZZMDdDNmQrcEFUQWlYdVpoMHU2aDVjaERqRmFMUGY2Wi9uWHNXVlNicApaUGFEN01NMU5TbD [...]
    service:
      name: seldon-webhook-service
      namespace: kubeflow
      path: /mutate-machinelearning-seldon-io-v1alpha3-seldondeployment
      port: 8443
  failurePolicy: Fail
  name: v1alpha3.mseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
    matchLabels:
      serving.kubeflow.org/inferenceservice: enabled
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
