tests/stacks/openshift/application/seldon/test_data/expected/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_seldon-validating-webhook-configuration-kubeflow.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/seldon-serving-cert
  creationTimestamp: null
  labels:
    app: seldon
    app.kubernetes.io/component: seldon
    app.kubernetes.io/instance: seldon-core
    app.kubernetes.io/name: seldon-core-operator
    app.kubernetes.io/version: 1.6.0
  name: seldon-validating-webhook-configuration-kubeflow
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCRENDQWV5Z0F3SUJBZ0lRZkllWkRmeXpad1M0MTRjd0JxVXd3akFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGamRYTjBiMjB0YldWMGNtbGpjeTFqWVRBZUZ3MHlNVEF5TVRJeE9URXlNVE5hRncweQpNakF5TVRJeE9URXlNVE5hTUJ3eEdqQVlCZ05WQkFNVEVXTjFjM1J2YlMxdFpYUnlhV056TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXFFWGZpeDZoRk9BK2U0a2ZtTVJnd0IzUXFCeGgKK2c5SjNxVlpxYmF0VnZsWGhOTHR1aDVndDd1OFBOM0ZSTWRxdzk0QTUwSjRlMFdQaVBPdXI3K2R5bzkrYXJQbQpCZXhhYnFncG9sSm [...]
    service:
      name: seldon-webhook-service
      namespace: kubeflow
      path: /validate-machinelearning-seldon-io-v1-seldondeployment
      port: 8443
  failurePolicy: Fail
  name: v1.vseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
    matchLabels:
      serving.kubeflow.org/inferenceservice: enabled
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
  sideEffects: None
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCRENDQWV5Z0F3SUJBZ0lRZkllWkRmeXpad1M0MTRjd0JxVXd3akFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGamRYTjBiMjB0YldWMGNtbGpjeTFqWVRBZUZ3MHlNVEF5TVRJeE9URXlNVE5hRncweQpNakF5TVRJeE9URXlNVE5hTUJ3eEdqQVlCZ05WQkFNVEVXTjFjM1J2YlMxdFpYUnlhV056TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXFFWGZpeDZoRk9BK2U0a2ZtTVJnd0IzUXFCeGgKK2c5SjNxVlpxYmF0VnZsWGhOTHR1aDVndDd1OFBOM0ZSTWRxdzk0QTUwSjRlMFdQaVBPdXI3K2R5bzkrYXJQbQpCZXhhYnFncG9sSm [...]
    service:
      name: seldon-webhook-service
      namespace: kubeflow
      path: /validate-machinelearning-seldon-io-v1alpha2-seldondeployment
      port: 8443
  failurePolicy: Fail
  name: v1alpha2.vseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
    matchLabels:
      serving.kubeflow.org/inferenceservice: enabled
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
  sideEffects: None
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCRENDQWV5Z0F3SUJBZ0lRZkllWkRmeXpad1M0MTRjd0JxVXd3akFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGamRYTjBiMjB0YldWMGNtbGpjeTFqWVRBZUZ3MHlNVEF5TVRJeE9URXlNVE5hRncweQpNakF5TVRJeE9URXlNVE5hTUJ3eEdqQVlCZ05WQkFNVEVXTjFjM1J2YlMxdFpYUnlhV056TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXFFWGZpeDZoRk9BK2U0a2ZtTVJnd0IzUXFCeGgKK2c5SjNxVlpxYmF0VnZsWGhOTHR1aDVndDd1OFBOM0ZSTWRxdzk0QTUwSjRlMFdQaVBPdXI3K2R5bzkrYXJQbQpCZXhhYnFncG9sSm [...]
    service:
      name: seldon-webhook-service
      namespace: kubeflow
      path: /validate-machinelearning-seldon-io-v1alpha3-seldondeployment
      port: 8443
  failurePolicy: Fail
  name: v1alpha3.vseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
    matchLabels:
      serving.kubeflow.org/inferenceservice: enabled
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
  sideEffects: None
