tests/stacks/openshift/application/seldon/test_data/expected/~g_v1_service_seldon-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seldon
    app.kubernetes.io/component: seldon
    app.kubernetes.io/instance: seldon-core
    app.kubernetes.io/name: seldon-core-operator
    app.kubernetes.io/version: 1.6.0
  name: seldon-webhook-service
  namespace: kubeflow
spec:
  ports:
  - port: 8443
    targePort: 8443
    targetPort: 443
  selector:
    app: seldon
    app.kubernetes.io/component: seldon
    app.kubernetes.io/instance: seldon1
    app.kubernetes.io/name: seldon-core-operator
    app.kubernetes.io/version: v0.5
    control-plane: seldon-controller-manager
